# GroupY-HIPS

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hips/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/hips/: AppInfo.kt  BitmapUtils.kt  CameraPermission.kt  CameraScreen.kt  ChangePinGesture.kt  CoverAppScreen.kt  EmbedPage.kt  ExtractPage.kt  MainActivity.kt  RealMain.kt  SettingsPage.kt  Steganography.kt  StegoFileHelper.kt  UnlockScreen.kt
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hips/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
